# SISTEMAPOS

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260506_0001_initial_schema.py  20260506_0002_product_unit_of_measure.py  20260506_0003_product_internal_code_optional.py  20260509_0004_app_settings.py  20260509_0005_role_permissions.py  20260509_0006_general_settings.py  20260509_0007_company_tax_id.py  20260509_0008_cash_movements.py  20260509_0009_sale_number_sequence.py  20260510_0010_cash_closures.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  constants.py  exceptions.py  reason_catalog.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  cash.py  catalog.py  inventory.py  sales.py  settings.py  user.py
backend/app/repositories/: base.py  cash_repository.py  catalog_repository.py  inventory_repository.py  payment_repository.py  purchase_repository.py  sale_repository.py  settings_repository.py  user_repository.py
backend/app/schemas/: auth.py  cash.py  category.py  common.py  inventory.py  payment_method.py  product.py  purchase.py  report.py  role.py  sale.py  settings.py  supplier.py  user.py
backend/app/services/: auth_service.py  cash_service.py  catalog_service.py  inventory_service.py  payment_service.py  purchase_service.py  report_service.py  role_service.py  sale_service.py  settings_service.py  user_service.py
backend/minimarket_pos_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+95 files in other folders)
